--- a/app/src/main/res/layout/activity_route_choice.xml
+++ b/app/src/main/res/layout/activity_route_choice.xml
@@ -16,6 +16,7 @@
             android:layout_height="42dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
+            android:background="#00D87070"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_trending_up_black_24dp" />
@@ -38,27 +39,50 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="12dp"
             android:text="ルート決定方法を選択して下さい"
             android:textAlignment="textStart"
             android:textColor="#838383"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.025" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
-            android:onClick="onClose"
-            android:text="閉じる"
-            android:textColor="#000000"
+            android:id="@+id/button4"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/button_background"
+            android:shadowColor="#00FFFFFF"
+            android:text="スポットで選ぶ"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#963A3A"
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
+            android:background="@drawable/button_background"
+            android:shadowColor="#00FFFFFF"
+            android:text="見学時間で選ぶ"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#963A3A"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/button4"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/button4"
+            app:layout_constraintTop_toBottomOf="@+id/button4"
+            app:layout_constraintVertical_bias="0.247" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
