--- a/app/src/main/res/layout/activity_route_choice.xml
+++ b/app/src/main/res/layout/activity_route_choice.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="@dimen/margin"
+            android:layout_marginTop="@dimen/margin"
             android:background="#00D87070"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -24,23 +28,29 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="42dp"
+            android:layout_alignTop="@+id/imageView"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="2dp"
+            android:layout_toEndOf="@+id/imageView"
             android:text="ルート見学"
             android:textAlignment="textStart"
             android:textColor="#414141"
             android:textSize="30sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="12dp"
+            android:layout_below="@+id/textView2"
+            android:layout_alignStart="@+id/imageView"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="6dp"
             android:text="ルート決定方法を選択して下さい"
             android:textAlignment="textStart"
             android:textColor="#838383"
@@ -48,28 +58,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginRight="25dp"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="スポットで選ぶ"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:orientation="vertical">
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
             android:background="@drawable/button_background"
             android:shadowColor="#00FFFFFF"
             android:text="見学時間で選ぶ"
@@ -77,13 +82,22 @@
             android:textColorHint="#963A3A"
             android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/button4"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/button4"
-            app:layout_constraintTop_toBottomOf="@+id/button4"
-            app:layout_constraintVertical_bias="0.247" />
+            android:onClick="onButton1"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:shadowColor="#00FFFFFF"
+            android:text="スポットで選ぶ"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#963A3A"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:onClick="onButton2"/>
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
