--- a/app/src/main/res/layout/activity_route_choice_spot.xml
+++ b/app/src/main/res/layout/activity_route_choice_spot.xml
@@ -51,7 +51,7 @@
             android:layout_alignStart="@+id/imageView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="6dp"
-            android:text="希望する見学時間を選んで下さい"
+            android:text="行きたいスポットを選択して下さい"
             android:textAlignment="textStart"
             android:textColor="#838383"
             android:textSize="18sp"
@@ -60,84 +60,50 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:orientation="vertical">
+        android:layout_weight="0.5"
+        android:background="#FFFFFF" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.1"
+        android:background="#DDDDDD"
+        android:elevation="45dp">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:text="箇所選択中"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button10"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="22dp"
             android:background="@drawable/button_background"
             android:shadowColor="#00FFFFFF"
-            android:text="30分"
+            android:text="決定"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
             android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="60分"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="90分"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="120分"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="150分"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
