--- a/app/src/main/res/layout/activity_route_map.xml
+++ b/app/src/main/res/layout/activity_route_map.xml
@@ -43,21 +43,6 @@
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView2"
-            android:layout_alignStart="@+id/imageView"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="6dp"
-            android:text="行きたいスポットを選択して下さい"
-            android:textAlignment="textStart"
-            android:textColor="#838383"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -75,7 +60,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:text="スポットのリスト"
+            android:text="経路MAP"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="18sp" />
@@ -84,7 +69,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.1"
+        android:layout_weight="0.8"
         android:background="#DDDDDD"
         android:elevation="45dp">
 
@@ -92,34 +77,16 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:text="箇所選択中"
-            android:textAlignment="center"
-            android:textSize="24sp" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/textView3"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="22dp"
-            android:background="@drawable/button_background"
-            android:shadowColor="#00FFFFFF"
-            android:text="決定"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#963A3A"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:layout_marginTop="63dp"
+            android:layout_marginBottom="65dp"
+            android:gravity="center"
+            android:text="選択したスポットのリスト"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
     </RelativeLayout>
 
 </LinearLayout>
