--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             android:background="@drawable/button_background"
             android:backgroundTint="#E91E63"
             android:onClick="onButton2"
-            android:text="スポット選択"
+                android:text="スポット検索"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
