--- a/app/src/main/res/layout/activity_route_choice_spot.xml
+++ b/app/src/main/res/layout/activity_route_choice_spot.xml
@@ -64,21 +64,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.5"
-        android:background="#FFFFFF" >
+        android:background="#FFFFFF"
+        android:id="@+id/activity_route_choice_spot"
+        tools:context=".RouteChoiceSpotActivity">
+        <!-- 上の id と context 変えるの忘れずに -->
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:text="スポットのリスト"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="24dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+
     </RelativeLayout>
 
     <RelativeLayout
