--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +7,17 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="214dp">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="0dp"
-            android:layout_height="139dp"
-            android:layout_marginTop="16dp"
-            android:background="#8F8E8E"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#CACACA"
             android:gravity="center"
-            android:text="タイトル画面"
+            android:text="せんだい3.11"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="50sp"
@@ -28,62 +27,51 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button8"
-            android:layout_width="match_parent"
-            android:layout_height="125dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="#E91E63"
-            android:onClick="onButton2"
-                android:text="スポット検索"
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button9" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="30dp">
 
         <Button
             android:id="@+id/button9"
             android:layout_width="match_parent"
-            android:layout_height="125dp"
-            android:layout_marginTop="28dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
             android:background="@drawable/button_background"
-            android:backgroundTint="#009688"
             android:onClick="onButton1"
             android:text="ルート見学"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/button8"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/button8"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            android:textStyle="bold" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#BDBDBD"
-            android:onClick="onClose"
-            android:text="閉じる"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="125dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
             android:background="@drawable/button_background"
-            android:backgroundTint="#FF9800"
             android:onClick="onButton3"
             android:text="避難経路辿り"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/button9"
-            app:layout_constraintTop_toBottomOf="@+id/button8" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:onClick="onButton2"
+            android:text="スポット検索"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+</LinearLayout>
