--- a/app/src/main/res/layout/activity_route_choice_spot.xml
+++ b/app/src/main/res/layout/activity_route_choice_spot.xml
@@ -83,8 +83,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.1"
-        android:background="#DDDDDD"
+        android:layout_weight="1.3"
+        android:background="#ECECEC"
         android:elevation="45dp">
 
         <TextView
@@ -94,8 +94,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:text="箇所選択中"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="1dp"
+            android:text="３箇所選択中"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -108,17 +110,17 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="36dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
             android:text="決定"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </LinearLayout>
