--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -5,9 +5,18 @@
     android:baselineAligned="false"
     android:orientation="horizontal"
     android:paddingLeft="20dp"
-    android:paddingTop="5dp"
+    android:paddingTop="8dp"
     android:paddingRight="20dp"
-    android:paddingBottom="5dp">
+    android:paddingBottom="8dp">
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="30dp"
+        android:layout_height="109dp"
+        android:gravity="center"
+        android:text="CheckBox"
+        android:textColor="@color/colorAccent"
+        android:textSize="10sp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -15,46 +24,57 @@
 
         <!-- 枠を入れるだけで深い意味はありません -->
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:background="@color/colorPrimary"
             android:contentDescription="@string/description1" />
 
         <ImageView
             android:id="@+id/image_view"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_margin="2dp"
+            android:layout_width="106dp"
+            android:layout_height="106dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
             android:contentDescription="@string/description2" />
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/colorMain"
+        android:background="#E0ECE8"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="20dp"
-            android:paddingTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="9dp"
+            android:paddingStart="5dp"
             android:paddingEnd="10dp"
-            android:textColor="#00f"
-            android:textSize="24sp" />
+            android:textColor="@color/colorPrimary"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/email_view"
+            android:id="@+id/caption_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:layout_below="@+id/text_view"
+            android:layout_alignStart="@+id/text_view"
             android:layout_gravity="center_vertical"
-            android:autoLink="email"
-            android:paddingStart="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:paddingStart="5dp"
             android:paddingEnd="10dp"
             android:textSize="18sp" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
