--- a/app/src/main/res/layout/activity_route_map.xml
+++ b/app/src/main/res/layout/activity_route_map.xml
@@ -7,7 +7,7 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
-    <RelativeLayout
+<!--    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF">
@@ -20,6 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="@dimen/margin"
             android:layout_marginTop="@dimen/margin"
+            android:layout_marginBottom="15dp"
             android:background="#00D87070"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +44,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:layout_constraintVertical_bias="0.0" />
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -51,19 +52,19 @@
         android:layout_weight="0.5"
         android:background="#FFFFFF" >
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+        <fragment android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:text="経路MAP"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/map"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            class="com.google.android.gms.maps.SupportMapFragment"
+
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            map:cameraTargetLat="38.2757291"
+            map:cameraTargetLng="140.75148479999996"
+            map:cameraZoom="15"
+            />
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -71,21 +72,17 @@
         android:layout_height="match_parent"
         android:layout_weight="0.8"
         android:background="#DDDDDD"
-        android:elevation="45dp">
+        android:elevation="45dp"
+        android:id="@+id/activity_route_map"
+        tools:context=".RouteMapActivity">
 
-        <TextView
-            android:id="@+id/textView3"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="63dp"
-            android:layout_marginBottom="65dp"
-            android:gravity="center"
-            android:text="選択したスポットのリスト"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </RelativeLayout>
 
