--- a/app/src/main/res/layout/activity_route_choice_spot.xml
+++ b/app/src/main/res/layout/activity_route_choice_spot.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
             android:layout_toEndOf="@+id/imageView"
-            android:text="ルート見学"
+            android:text="@string/route_visit"
             android:textAlignment="textStart"
             android:textColor="#414141"
             android:textSize="30sp"
@@ -51,7 +51,7 @@
             android:layout_alignStart="@+id/imageView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="6dp"
-            android:text="行きたいスポットを選択して下さい"
+            android:text="@string/choice_spot_caption"
             android:textAlignment="textStart"
             android:textColor="#838383"
             android:textSize="18sp"
@@ -97,7 +97,7 @@
             android:layout_marginStart="-1dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="1dp"
-            android:text="３箇所選択中"
+            android:text="@string/choice_spot_selected"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -116,7 +116,7 @@
             android:background="@drawable/button_background"
             android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="決定"
+            android:text="@string/cast_tracks_chooser_dialog_ok"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
