--- a/app/src/main/res/layout/activity_route_choice_time.xml
+++ b/app/src/main/res/layout/activity_route_choice_time.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
             android:layout_toEndOf="@+id/imageView"
-            android:text="ルート見学"
+            android:text="@string/route_visit"
             android:textAlignment="textStart"
             android:textColor="#414141"
             android:textSize="30sp"
@@ -51,7 +51,7 @@
             android:layout_alignStart="@+id/imageView"
             android:layout_marginStart="15dp"
             android:layout_marginTop="6dp"
-            android:text="希望する見学時間を選んで下さい"
+            android:text="@string/choice_time_caption"
             android:textAlignment="textStart"
             android:textColor="#838383"
             android:textSize="18sp"
@@ -76,13 +76,13 @@
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="30分"
+            android:text="@string/choice_time_30"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button60min"
@@ -91,13 +91,13 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="60分"
+            android:text="@string/choice_time_60"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button90min"
@@ -106,13 +106,13 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="90分"
+            android:text="@string/choice_time_90"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button120min"
@@ -121,13 +121,13 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="120分"
+            android:text="@string/choice_time_120"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button150min"
@@ -136,13 +136,13 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_background"
+            android:onClick="onButton1"
             android:shadowColor="#00FFFFFF"
-            android:text="150分"
+            android:text="@string/choice_time_150"
             android:textColor="#FFFFFF"
             android:textColorHint="#963A3A"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:onClick="onButton1"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
