--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="スポット追加リクエスト"
+            android:text="@string/setting"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#FFFFFF"
             android:onClick="onClose"
-            android:text="閉じる"
+            android:text="@string/close"
             android:textColor="#000000"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent" />
