--- a/app/src/main/res/layout/activity_spot.xml
+++ b/app/src/main/res/layout/activity_spot.xml
@@ -34,7 +34,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
             android:layout_toEndOf="@+id/imageView"
-            android:text="スポット一覧"
+            android:text="@string/spot_list"
             android:textAlignment="textStart"
             android:textColor="#414141"
             android:textSize="30sp"
@@ -95,7 +95,7 @@
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
-            android:text="絞り込み"
+            android:text="@string/spot_list_narrowing"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
@@ -110,7 +110,7 @@
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
-            android:text="並び替え"
+            android:text="@string/spot_list_sorting"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
     </LinearLayout>
