--- a/app/src/main/res/layout/activity_spot_detail.xml
+++ b/app/src/main/res/layout/activity_spot_detail.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_toEndOf="@+id/imageView"
-            android:text="仙台市立荒浜小学校"
+            android:text="@string/arahama_school"
             android:textAlignment="textStart"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
@@ -77,7 +77,7 @@
             android:layout_centerVertical="true"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
-            android:text="スポットAR"
+            android:text="@string/spot_ar"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
@@ -91,7 +91,7 @@
             android:layout_centerVertical="true"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
-            android:text="メモリー投稿"
+            android:text="@string/memory_float"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
     </LinearLayout>
