--- a/app/src/main/res/layout/activity_spot_detail.xml
+++ b/app/src/main/res/layout/activity_spot_detail.xml
@@ -71,29 +71,30 @@
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentBottom="false"
+            android:layout_centerVertical="false"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
             android:text="@string/spot_ar"
             android:textColor="#FFFFFF"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentBottom="false"
+            android:layout_centerVertical="false"
             android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
+            android:onClick="onButtonMemoryFloatMain"
             android:text="@string/memory_float"
             android:textColor="#FFFFFF"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <RelativeLayout
